--- a/style/header.css
+++ b/style/header.css
@@ -12,15 +12,15 @@ header {
 }
 
 .nav-list {
-          width: 20vw;
           display: flex;
           flex-direction: column;
-          background-color: #e0eff8;
 }
 
 .nav-list ul {
+          width: 20%;
           display: flex;
-          justify-content: space-evenly;
+          justify-content: space-between ;
+          gap: 3rem;
 }
 
 .nav-list ul li {
@@ -30,4 +30,6 @@ header {
 
 .nav-list ul li a {
           font-family: 'Open Sans', sans-serif;
+          text-decoration: none;
+          color: rgb(68, 68, 68);
 }
