--- a/style/index.css
+++ b/style/index.css
@@ -1,3 +1,8 @@
+* {
+          margin: 0;
+          padding: 0;
+}
+
 @font-face {
           font-family: 'Open Sans';
           src: url('../fonts/opensans-bolditalic-webfont.ttf') format('truetype');
@@ -6,6 +11,13 @@
 }
 
 header {
+          display: flex;
+          justify-content: space-between;
+}
+}
+
+#header {
+          margin: 0px 100px;
           width: 100%;
           display: flex;
           justify-content: space-between;
@@ -17,9 +29,8 @@ header {
 }
 
 .nav-list ul {
-          width: 20%;
           display: flex;
-          justify-content: space-between ;
+          justify-content: space-between;
           gap: 3rem;
 }
 
