--- a/style/header.css
+++ b/style/header.css
@@ -11,7 +11,7 @@ header {
 }
 
 .header-wrapper {
-          padding: 20px 180px;
+          padding: 20px 240px;
           display: flex;
           justify-content: space-between;
           align-items: center;
@@ -22,6 +22,7 @@ header {
           display: flex;
           justify-content: space-between;
           gap: 3rem;
+          
 }
 
 .nav-list ul li {
@@ -33,4 +34,10 @@ header {
           font-family: 'Open Sans', sans-serif;
           text-decoration: none;
           color: rgb(116, 116, 116);
+          font-size: 25px;
+}
+
+.cookako-logo{
+    width: 600px;
+    height: 200px;
 }
