--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@ body {
 
 .chef{
     display: flex;
-    margin: 0% -20% 0% 10%;
+    margin: 0% -20% 0% 2%;
     width: 53%;
     height: 60%;
 }
@@ -33,20 +33,23 @@ pre{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.follows{
+.container2{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    font-size: 130%;
+    font-size: 150%;
+    margin: 35px 0px 0px 150px;
 }
 
 .follow{
+    width: 35%;
     z-index: 1;
 }
 .flowe{
     z-index: 2;
 }
 
-.following{
-    position: relative;   
+.container3{
+    position: relative;
+    margin: 35px 0px 0px 180px;  
 }
