--- a/style/index.css
+++ b/style/index.css
@@ -7,6 +7,7 @@ body {
           background-image: url('../images/bg-body.jpg');
 }
 
+/* eto si chef */
 .chef{
     display: flex;
     margin: 0% -20% 0% 2%;
@@ -14,12 +15,14 @@ body {
     height: 60%;
 }
 
+/* eto yung selpon */
 .smartphone{
     display: flex;
     width: 60%;
     height: 50%;
 }
 
+/* eto container ni chef at nung phone */
 .container{
     position: relative;
     display: flex;
@@ -28,11 +31,13 @@ body {
     align-items: center;
 }
 
+/* eto yung text sa ilalim ni chef */
 pre{
     color: rgb(170, 132, 26);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* eto yung container nung text sa ilalim ni chef  */
 .container2{
     display: flex;
     flex-direction: column;
@@ -41,15 +46,46 @@ pre{
     margin: 35px 0px 0px 150px;
 }
 
+/* eto yung box ng follow */
 .follow{
     width: 35%;
-    z-index: 1;
-}
-.flowe{
-    z-index: 2;
+    z-index: 1;;
 }
 
+/* eto yung text na follow us */
+.flowe{
+    position: absolute;
+    z-index: 2;
+    bottom: 220px;
+    left: 140px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bolder;
+    color: rgb(170, 132, 26);
+    font-size: 50px;
+    letter-spacing: 5px;
+    text-shadow: 0px 1px white;
+}
+
+/* eto obvious nmn na mga icons toh eh */
+.twitter, .facebook, .google{
+    position: absolute;
+    left: 110px;
+    top: 130px;
+    width: 80px;
+    height: 70px;
+}
+.facebook{
+    margin: 0px 0px 0px 145px;
+}
+
+.google{
+    margin: 0px 0px 0px 300px;
+}
+
+/* eto yung container nung box tsaka nung text at nung mga icons */
 .container3{
     position: relative;
-    margin: 35px 0px 0px 180px;  
+    margin: 35px 0px 0px 180px; 
+    width: auto;
+
 }
