--- a/style/news.css
+++ b/style/news.css
@@ -19,9 +19,8 @@ body {
 }
 
 .chef {
-          margin-left: 60px;
           width: 150%;
-          position: relative;
+          padding-left: ;
 }
 
 .news {
