--- a/style/index.css
+++ b/style/index.css
@@ -5,87 +5,31 @@
 
 body {
           background-image: url('../images/bg-body.jpg');
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
 }
 
-/* eto si chef */
-.chef{
+div.container.my-container{
     display: flex;
-    margin: 0% -20% 0% 2%;
-    width: 53%;
-    height: 60%;
-}
-
-/* eto yung selpon */
-.smartphone{
-    display: flex;
-    width: 60%;
-    height: 50%;
-}
-
-/* eto container ni chef at nung phone */
-.container{
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-/* eto yung text sa ilalim ni chef */
-pre{
-    color: rgb(170, 132, 26);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-/* eto yung container nung text sa ilalim ni chef  */
-.container2{
-    display: flex;
+    flex: wrap;
+    width: 100%;
+    margin: 0;
     flex-direction: column;
-    flex-wrap: wrap;
-    font-size: 150%;
-    margin: 35px 0px 0px 150px;
 }
 
-/* eto yung box ng follow */
-.follow{
-    width: 35%;
-    z-index: 1;;
+.my-wrapper{
+    display: flex;
+    flex: wrap;
+    flex-direction: row;
+    width: 100%;
 }
 
-/* eto yung text na follow us */
-.flowe{
-    position: absolute;
-    z-index: 2;
-    bottom: 220px;
-    left: 140px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bolder;
-    color: rgb(170, 132, 26);
-    font-size: 50px;
-    letter-spacing: 5px;
-    text-shadow: 0px 1px white;
+.chef{
+    width: 110%;
+    margin: 0px -240px 0px 0px;
 }
 
-/* eto obvious nmn na mga icons toh eh */
-.twitter, .facebook, .google{
-    position: absolute;
-    left: 110px;
-    top: 130px;
-    width: 80px;
-    height: 70px;
-}
-.facebook{
-    margin: 0px 0px 0px 145px;
-}
-
-.google{
-    margin: 0px 0px 0px 300px;
-}
-
-/* eto yung container nung box tsaka nung text at nung mga icons */
-.container3{
-    position: relative;
-    margin: 35px 0px 0px 180px; 
-    width: auto;
-
+.phone{
+    width: 140%;
 }
