--- a/style/index.css
+++ b/style/index.css
@@ -8,28 +8,59 @@ body {
           display: flex;
           flex-wrap: wrap;
           justify-content: center;
+          width: 100%;
 }
 
-div.container.my-container{
+.my-container{
     display: flex;
     flex: wrap;
     width: 100%;
     margin: 0;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .my-wrapper{
     display: flex;
     flex: wrap;
     flex-direction: row;
-    width: 100%;
+    width: 120%;
 }
 
 .chef{
-    width: 110%;
+    width: 300%;
     margin: 0px -240px 0px 0px;
+    height: 300%;
 }
 
 .phone{
-    width: 140%;
+    width: 100%;
+    height: 100%;
+}
+
+.txto{
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
+    font-weight: 200;
+    color: rgb(128, 80, 25);
+}
+
+.mid-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.firstmid-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+}
+.secondmid-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    height: 50%;
 }
