--- a/style/index.css
+++ b/style/index.css
@@ -54,6 +54,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     width:100%;
+    align-items: center;
     justify-content: center;
     column-gap: 60px;
 }
@@ -63,16 +64,13 @@ body {
 }
 
 .viewmore:hover{
-    mask-image: url(../images/viewmore\(clicked\)png.png);
-    mask-repeat: no-repeat;
-    mask-size: contain;
+   content: url("../images/viewmore\(clicked\)png.png");
+   width: 30%;
 }
 
 .clickhere:hover{
-    mask-image: url(../images/clickhere\(clicked\).png);
-    mask-repeat: no-repeat;
-    mask-size: contain;
-    mask-mode: luminance;
+     content: url("../images/clickhere\(clicked\).png");
+     width: 30%;
 }
 
 .txto{
@@ -93,10 +91,71 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 50%;
+    justify-content: center;
 }
+
+.firstmid1-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.firstmid2-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.follow{
+    width: 200%;
+    height: 180%;
+}
+
+.followtxt{
+    position: absolute;
+    top: 172%;
+    left: 24.5%;
+    color: rgb(156, 106, 30);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 900;
+    font-size: 300%;
+    letter-spacing: 6px;
+    width: 20%;
+}
+
+.icons{
+    position: absolute;
+    top: 182%;
+    left: 21.5%;
+    width: 23%;
+    
+}
+
+.icons-wrapper{
+    display: flex;
+    column-gap: 100px;
+}
+
+.twitter, .facebook, .google{
+    width: 30%;
+}
+
+.twitter:hover{
+    content: url(../images/twitter\(clicked\).png);
+}
+
+.facebook:hover{
+    content: url(../images/facebook\(clicked\).png);
+}
+
+.google:hover{
+    content: url(../images/google\(clicked\).png);
+}
+
 .secondmid-wrapper{
     display: flex;
     flex-wrap: wrap;
     width: 50%;
     height: 50%;
+    justify-content: center;
 }
