--- a/style/index.css
+++ b/style/index.css
@@ -14,7 +14,7 @@ body {
 .my-container{
     display: flex;
     flex: wrap;
-    width: 100%;
+    width: 120%;
     margin: 0;
     flex-direction: column;
     justify-content: center;
@@ -26,19 +26,19 @@ body {
     flex: wrap;
     flex-direction: row;
     width: 120%;
-    margin: 0px 0px 50px 0px;
+    margin: 0px 0px 5% 0px;
 }
 
 .chef{
     width: 300%;
-    margin: 0px -240px 0px 0px;
+    margin: 0px -10% 0px 0px;
     height: 300%;
 }
 
 .phone{
     width: 300%;
     height: 300%;
-    margin: 0px 0px -40px 0px;
+    margin: 0px 0px -5% 0px;
 }
 
 .phone-wrapper{
@@ -74,23 +74,30 @@ body {
 }
 
 .txto{
-    font-size: 30px;
+    font-size: 120%;
     font-family: Arial, Helvetica, sans-serif;
     src: url('../fonts/opensans-regular-webfont.ttf') format('truetype');
     font-weight: 200;
     color: rgb(128, 80, 25);
 }
 
+.mid-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 120%;
+}
+
 .mid-wrapper{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    width: 120%;
 }
 
 .firstmid-wrapper{
     display: flex;
     flex-wrap: wrap;
-    width: 50%;
+    width: 40%;
     justify-content: center;
 }
 
@@ -107,37 +114,37 @@ body {
 }
 
 .follow{
-    width: 200%;
-    height: 180%;
+    width: 100%;
+    height: 80%;
 }
 
 .followtxt{
     position: absolute;
-    top: 172%;
+    top: 153%;
     left: 24.5%;
     color: rgb(156, 106, 30);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 900;
-    font-size: 300%;
+    font-size: 150%;
     letter-spacing: 6px;
     width: 20%;
 }
 
 .icons{
     position: absolute;
-    top: 182%;
-    left: 21.5%;
+    top: 157.5%;
+    left: 24.5%;
     width: 23%;
     
 }
 
 .icons-wrapper{
     display: flex;
-    column-gap: 100px;
+    column-gap: 10%;
 }
 
 .twitter, .facebook, .google{
-    width: 30%;
+    width: 8%;
 }
 
 .twitter:hover{
@@ -155,7 +162,28 @@ body {
 .secondmid-wrapper{
     display: flex;
     flex-wrap: wrap;
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 100%;
     justify-content: center;
 }
+
+.newsimg{
+    width: 109%;
+    height: 12.3%;
+    margin: 0px -2% 0px -2%;
+}
+
+.secondmid1-container{
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url(../images/whitecolumn.png);
+    background-size: cover;
+    margin: 0% 0% 6% 0%;
+    padding:  5% 0% 9% 0%;
+}
+
+/* .contentimg{
+    width: 114.3%;
+    height: 300%;
+    margin: 0% 0% 0% 2.7%;
+} */
